[package]
name = "gabe_cli"
version = "0.1.0"
authors = ["Joe Thill <rocketlobster42@gmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
debug = true

[dependencies]
clap = "2.33.0"
log = "*"
env_logger = "*"
minifb = "0.23.0"
cpal = "*"
gabe_core = { path = "../gabe_core" }