[package]
name = "gabe_cli"
version = "0.1.0"
authors = ["Joe Thill <rocketlobster42@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.release]
debug = true

[dependencies]
clap = "2.33.0"
log = "*"
env_logger = "*"
cpal = "*"
spin_sleep = "*"
gabe_core = { path = "../gabe_core" }

[target.'cfg(not(unix))'.dependencies]
minifb = { version = "0.23.0", default-features = false }

# Not currently cooperating with GNOME Wayland window decorations
[target.'cfg(unix)'.dependencies]
minifb = { version = "0.23.0", default-features = false, features = ["x11"] }
